<resources>
    <string name="app_name">SaborMap</string>

    <!-- ************************ Login *******************************-->
    <string name="enter_email_login">Ingrese el correo</string>
    <string name="enter_password_login">Ingrese la contraseña</string>
    <!--********************  Button Login   **************************-->
    <string name="btn_star_login">Iniciar</string>
    <string name="btn_lost_password_login">¿Perdiste tu contraseña?</string>
    <string name="btn_sing_up_login">¿No tienes cuenta? Regístrate</string>
    <string name="btn_google_login">Continuar con Google</string>
    <!-- ****************** Register site *****************************-->
    <!-- ********************** Register ******************************-->
    <string name="name_user">Ingrese los nombres</string>
    <string name="last_name_user">Ingrese los apellidos</string>
    <string name="email_user">Ingrese el correo</string>
    <string name="nickname_user">Ingrese el nombre de Usuario</string>
    <string name="password_user">Ingrese la contraseña</string>
    <string name="password_seco_user">Repita la contraseña</string>
    <!--********************  Button Register   **********************-->
    <string name="btn_register">Registrar</string>



    <!-- **********************   Error *******************************-->
    <string name="msg_error">Obligatorio</string>


    <!-- ****************** Register site *****************************-->
    <string name="name_site">Ingrese el nombre del local</string>
    <string name="description">Descripcion</string>
    <string name="phone_site">Ingrese el numero celular</string>
    <!--******************  Button Register site **********************-->
    <string name="btn_register_site">Registrar Sitio</string>



</resources>