<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/gray_blue"
        app:hintTextColor="@android:color/black">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_forms"
            android:hint="@string/enter_email_login"

            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/til_form_pass">

        <EditText
            android:id="@+id/password_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_forms"
            android:hint="@string/enter_password_login"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_star_login"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/gray_blue"
            android:text="@string/btn_star_login"
            android:textSize="12dp"/>

        <Button
            android:id="@+id/btn_lost_password_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/off_white"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/btn_lost_password_login"
            android:textColor="@color/light_Gray" />

        <Button
            android:id="@+id/btn_sing_up_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/off_white"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/btn_sing_up_login"
            android:textColor="@color/light_Gray" />

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/logo_google_3"
            android:drawablePadding="8dp"
            android:text="@string/btn_google_login"
            android:textColor="@android:color/black" />


    </LinearLayout>


</LinearLayout>